--- a/src/main/resources/templates/product_list.html
+++ b/src/main/resources/templates/product_list.html
@@ -8,19 +8,59 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
           crossorigin="anonymous">
-    <title>List of products</title>
+
+    <title>Список товаров</title>
 </head>
 <body>
-<div class="container">
-    <nav>List of products</nav>
-    <br>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                       aria-expanded="false">
+                        Dropdown
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled">Disabled</a>
+                </li>
+            </ul>
+            <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+        </div>
+    </div>
+</nav>
+<div class="container text-center">
+
     <table class="table table-success table-striped .table table-bordered">
         <thead>
         <tr>
-            <th>Category name</th>
-            <th>Product name</th>
-            <th>Products price</th>
-            <th>Edit/Delete</th>
+            <th>Категория</th>
+            <th>Наименование</th>
+            <th>Цена</th>
+            <th>Изменить</th>
         </tr>
         </thead>
         <tbody>
@@ -32,22 +72,46 @@
             <td th:text="${product.getPrice()}">
             </td>
             <td>
+
                 <a th:href="@{/product/edit(productId=${product.id})}"
-                   class="btn btn-warning">edit</a>
+                   class="btn btn-warning">Изменить</a>
                 <a th:href="@{/product/delete(productId=${product.id})}"
-                   class="btn btn-danger">delete</a>
-                <a th:href="@{/product/show(productId=${product.id})}" class="btn btn-info">info</a>
+                   class="btn btn-danger">Удалить</a>
+                <a th:href="@{/product/show(productId=${product.id})}" class="btn btn-info">Информация о товаре</a>
+                <form method="post" th:action="@{/addToCart(productId=${product.id})}">
+                    <input type="hidden" name="productId" th:value="${product.id}">
+                    <input type="hidden" name="userId" th:value="${user.id}">
+                    <br>
+                    <button type="submit"> Добавить в корзину</button>
+                </form>
             </td>
         </tr>
         </tbody>
     </table>
-    <nav><button type="submit" class="btn btn-success" onclick="window.location.href = '/product/choose_category'">Add product</button></nav>
+    <div class="container overflow-hidden text-center">
+        <div class="row gx-1">
+            <div class="col">
+                <button type="submit" class="btn btn-success"
+                        onclick="window.location.href = '/product/choose_category'">
+                    Добавить товар
+                </button>
+            </div>
+            <div class="col">
+                <button type="submit" class="btn btn-info" onclick="window.location.href = '/adduser'">Добавить
+                    пользователя
+                </button>
+                <div class="col">
+                    <button type="submit" onclick="window.location.href = '/user_cart'"> Корзина</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+            crossorigin="anonymous">
+    </script>
 </div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous">
-</script>
-
 </body>
 </html>
