--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -5,24 +5,48 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+          crossorigin="anonymous">
+    <title>Корзина</title>
 </head>
 <body>
-
+<h2>Корзина:</h2>
 <div class="container">
-    <div th:each="cartItem : ${cartItems}">
-        <form th:action="@{/increase}" th:method="get">
-            <input type="hidden" name="cartItemId" th:value="${cartItem.getId()}">
-            <span th:text="${cartItem.getProduct().name}"></span>
-            <span th:text="${cartItem.getQuantity()}"></span>
-            <button type="submit">+</button>
-        </form>
-        <form th:action="@{/decrease}" th:method="get">
-            <input type="hidden" name="cartItemId" th:value="${cartItem.id}">
-            <button type="submit">-</button>
-        </form>
+    <div class="d-flex flex-row mb-3">
+        <div class="row">
+            <div class="col">
+                <div th:each="cartItem : ${cartItems}">
+                    <form th:action="@{/increase}" th:method="get">
+                        <span th:text="${cartItem.getProduct().name}"></span>
+                        <span th:text="${cartItem.getQuantity()}"></span>
+                        <input type="hidden" name="cartItemId" th:value="${cartItem.getId()}">
+                        <button type="submit">+</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div th:each="cartItem : ${cartItems}">
+                    <form th:action="@{/decrease}" th:method="get">
+                        <input type="hidden" name="cartItemId" th:value="${cartItem.id}">
+                        <button type="submit">-</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div th:each="cartItem : ${cartItems}">
+                    <form th:action="@{/deleteItem}" th:method="get">
+                        <input type="hidden" name="cartItemId" th:value="${cartItem.id}">
+                        <button type="submit">Удалить из корзины</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
-
 </body>
 </html>
