--- a/src/main/resources/templates/product_list.html
+++ b/src/main/resources/templates/product_list.html
@@ -73,7 +73,7 @@
             </td>
             <td>
 
-                <a th:href="@{/product/edit(productId=${product.id})}"
+                <a th:href="@{/product/update(productId=${product.id})}"
                    class="btn btn-warning">Изменить</a>
                 <a th:href="@{/product/delete(productId=${product.id})}"
                    class="btn btn-danger">Удалить</a>
