--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -48,5 +48,21 @@
         </div>
     </div>
 </div>
+
+<div class="back-button">
+    <div class="row">
+        <form th:action="@{/product/list}">
+            <button type="submit">Назад</button>
+        </form>
+    </div>
+</div>
+
+<div class="make-order">
+    <div class="row">
+        <form th:action="@{/make_order}">
+            <button type="submit">Оформить заказ</button>
+        </form>
+    </div>
+</div>
 </body>
 </html>
