--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -65,5 +65,17 @@
         </form>
     </div>
 </div>
+
+<!--<div class="change_status">-->
+<!--    <div class="row">-->
+<!--        <form th:action="@{/change_status}" method="post">-->
+<!--            <input type="hidden" name="orderId" th:value="${order.id}">-->
+<!--            <div th:each="status : ${order.getOrder_status()}">-->
+<!--                <input th:text="status.name">-->
+<!--            </div>-->
+<!--            <button type="submit">Изменить статус заказа</button>-->
+<!--        </form>-->
+<!--    </div>-->
+<!--</div>-->
 </body>
 </html>
