--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -11,75 +11,92 @@
     <title>Корзина</title>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" th:href="@{/product/list}">Каталог товаров</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">
+                        Меню
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#">Мои заказы</a></li>
+                        <li><a class="dropdown-item" th:href="@{/user_cart}">Моя корзина</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" th:href="@{/logout}">Выйти из аккаунта</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Название товара" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Поиск</button>
+            </form>
+        </div>
+    </div>
+</nav>
 <h2>Корзина:</h2>
 <div class="container">
     <div class="d-flex flex-row mb-3">
         <div class="row">
             <div class="col">
                 <div th:each="cartItem : ${cartItems}">
-                    <form th:action="@{/increase}" th:method="get">
+                    <div class="d-flex justify-content-between align-items-center">
                         <span th:text="${cartItem.getProduct().name}"></span>
-                        <span th:text="${cartItem.getQuantity()}"></span>
-                        <input type="hidden" name="cartItemId" th:value="${cartItem.getId()}">
-                        <button type="submit">+</button>
-                    </form>
+                        <form th:action="@{/increase}" th:method="get">
+                            <div class="d-flex align-items-center">
+                                <button type="submit" class="btn btn-outline-primary btn-sm mx-1">+</button>
+                                <span th:text="${cartItem.getQuantity()}"></span>
+                                <input type="hidden" name="cartItemId" th:value="${cartItem.getId()}">
+                            </div>
+                        </form>
+                        <form th:action="@{/decrease}" th:method="get">
+                            <div class="d-flex align-items-center">
+                                <button type="submit" class="btn btn-outline-primary btn-sm mx-1">-</button>
+                                <input type="hidden" name="cartItemId" th:value="${cartItem.getId()}">
+                            </div>
+                        </form>
+                        <form th:action="@{/deleteItem}" th:method="get">
+                            <div class="d-flex align-items-center">
+                                <button type="submit" class="btn btn-danger btn-sm mx-1">Удалить из корзины</button>
+                                <input type="hidden" name="cartItemId" th:value="${cartItem.getId()}">
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col">
-                <div th:each="cartItem : ${cartItems}">
-                    <form th:action="@{/decrease}" th:method="get">
-                        <input type="hidden" name="cartItemId" th:value="${cartItem.id}">
-                        <button type="submit">-</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <div th:each="cartItem : ${cartItems}">
-                    <form th:action="@{/deleteItem}" th:method="get">
-                        <input type="hidden" name="cartItemId" th:value="${cartItem.id}">
-                        <button type="submit">Удалить из корзины</button>
+    </div>
+</div>
+<div class="container">
+    <div class="d-flex flex-row mb-3">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-body">
+                    <form th:action="@{/product/list}">
+                        <button type="submit" class="btn btn-secondary">Назад</button>
                     </form>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-
-
-<div class="make-order">
-    <div class="row">
-        <form th:action="@{/make_order}" method="post">
-            <input type="text" name="deliveryAddress" th:value="${deliveryAddress}" placeholder="Впишите адрес доставки">
-            <button type="submit">Оформить заказ</button>
-        </form>
+<div class="products_price">
+    <form method="get" th:action="@{/price}"></form>
+    Сумма товаров в корзине
+    <p th:text="${price}"></p>
     </div>
-</div>
 
-<div class="back-button">
-    <div class="row">
-        <form th:action="@{/product/list}">
-            <button type="submit">Назад</button>
-        </form>
-    </div>
-</div>
-
-
-
-<!--<div class="change_status">-->
-<!--    <div class="row">-->
-<!--        <form th:action="@{/change_status}" method="post">-->
-<!--            <input type="hidden" name="orderId" th:value="${order.id}">-->
-<!--            <div th:each="status : ${order.getOrder_status()}">-->
-<!--                <input th:text="status.name">-->
-<!--            </div>-->
-<!--            <button type="submit">Изменить статус заказа</button>-->
-<!--        </form>-->
-<!--    </div>-->
-<!--</div>-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous">
+</script>
 </body>
 </html>
+
