--- a/src/main/resources/templates/choose_category.html
+++ b/src/main/resources/templates/choose_category.html
@@ -6,27 +6,81 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+          crossorigin="anonymous">
+
+    <link rel="stylesheet" type="text/css" href="choose_category.css">
     <title>Create Product</title>
 </head>
 <body>
-<h2>Create product</h2>
-<form action="/product/add_product" method="get">
-    <div class="form-check">
-        <b>Choose category:</b>
-        <p th:each="category : ${categories}">
-            <label class="form-check-label" th:for="${category.getId()}"></label>
-            <input class="form-check-input"
-                   type="radio"
-                   name="categoryId"
-                   th:value="${category.getId()}"
-                   th:id="${category.getId()}"
-                   th:text="${category.getName()}"
-                   required>
-
-        </p>
-        <button type="submit">Submit</button>
-
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" th:href="@{/product/list}">Каталог товаров</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">
+                        Меню
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#">Мои заказы</a></li>
+                        <li><a class="dropdown-item" th:href="@{/user_cart}">Моя корзина</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" th:href="@{/logout}">Выйти из аккаунта</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Название товара" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Поиск</button>
+            </form>
+        </div>
     </div>
-</form>
+</nav>
+<div class="container">
+    <div class="row mt-3">
+        <div class="col">
+            <h3>Создание товара</h3>
+            <form action="/product/add_product" method="get">
+                <div class="form-check">
+                    <b>Выберите категорию:</b>
+                    <div th:each="category : ${categories}">
+                        <div class="form-check">
+                            <input class="form-check-input"
+                                   type="radio"
+                                   name="categoryId"
+                                   th:value="${category.getId()}"
+                                   th:id="${category.getId()}"
+                                   required>
+                            <label class="form-check-label" th:for="${category.getId()}"
+                                   th:text="${category.getName()}"></label>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary mt-3">Подтвердить</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous">
+</script>
 </body>
 </html>
