--- a/src/main/resources/templates/product_list.html
+++ b/src/main/resources/templates/product_list.html
@@ -12,104 +12,89 @@
     <title>Список товаров</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" th:href="@{/product/list}">Каталог товаров</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                       aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">
                         Меню
                     </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Мои заказы</a></li>
-                        <li><a th:href="@{/user_cart}">Моя корзина</a></li>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" th:href="@{/user_orders}">Мои заказы</a></li>
+                        <li><a class="dropdown-item" th:href="@{/user_cart}">Моя корзина</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a th:href="@{/logout}">Выйти из аккаунта</a></li>
+                        <li><a class="dropdown-item" th:href="@{/logout}">Выйти из аккаунта</a></li>
                     </ul>
                 </li>
             </ul>
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+            <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Название товара" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Поиск</button>
             </form>
         </div>
     </div>
 </nav>
-<div class="container text-center">
-
-    <table class="table table-success table-striped .table table-bordered">
-        <thead>
-        <tr>
-            <th>Категория</th>
-            <th>Наименование</th>
-            <th>Цена</th>
-            <th>Изменить</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="product : ${products}">
-            <td th:text="${product.getCategory().getName()}">
-            </td>
-            <td th:text="${product.getName()}">
-            </td>
-            <td th:text="${product.getPrice()}">
-            </td>
-<!--
-isAuthenicated() -> авторизован
-hasRole() -> есть ли роль
--->
-<!--            <td th:if="${#authorization.expr('hasRole(''admin'')')}">-->
-            <td>
-                <a th:href="@{/product/update(productId=${product.id})}"
-                   class="btn btn-warning">Изменить</a>
-                <a th:href="@{/product/delete(productId=${product.id})}"
-                   class="btn btn-danger">Удалить</a>
-                <a th:href="@{/product/show(productId=${product.id})}" class="btn btn-info">Информация о товаре</a>
-                <form method="post" th:action="@{/addToCart(productId=${product.id})}">
-                    <input type="hidden" name="productId" th:value="${product.id}">
-                    <input type="hidden" name="userId" th:value="${user.id}">
-                    <br>
-                    <button type="submit"> Добавить в корзину</button>
-                </form>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-    <div class="container overflow-hidden text-center">
-        <div class="row gx-1">
-            <div class="col">
-                <button type="submit" class="btn btn-success"
-                        onclick="window.location.href = '/product/choose_category'">
-                    Добавить товар
-                </button>
-            </div>
-            <div class="col">
-                <button type="submit" class="btn btn-info" onclick="window.location.href = '/adduser'">Добавить
-                    пользователя
-                </button>
-            </div>
-        </div>
+<div class="container py-4">
+    <h2 class="text-center mb-4">Список продуктов</h2>
+    <div class="table-responsive">
+        <table class="table table-hover table-bordered table-striped align-middle">
+            <thead>
+            <tr>
+                <th>Категория</th>
+                <th>Наименование</th>
+                <th>Цена</th>
+                <th>Действия</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="product : ${products}">
+                <td th:text="${product.getCategory().getName()}"></td>
+                <td th:text="${product.getName()}"></td>
+                <td th:text="${product.getPrice()}"></td>
+                <td>
+                    <div class="d-flex justify-content-center gap-2">
+                        <a th:href="@{/product/update(productId=${product.id})}" class="btn btn-sm btn-primary">
+                            <i class="fas fa-edit"></i>
+                            Изменить
+                        </a>
+                        <a th:href="@{/product/delete(productId=${product.id})}" class="btn btn-sm btn-danger"
+                           onclick="return confirm('Вы уверены, что хотите удалить этот продукт?')">
+                            <i class="fas fa-trash"></i>
+                            Удалить
+                        </a>
+                        <a th:href="@{/product/show(productId=${product.id})}"
+                           class="btn btn-sm btn-outline-info">Информация о товаре</a>
+                        <form method="post" th:action="@{/addToCart(productId=${product.id})}">
+                            <input type="hidden" name="productId" th:value="${product.id}">
+                            <input type="hidden" name="userId" th:value="${user.id}">
+                            <button type="submit" class="btn btn-sm btn-outline-success">Добавить в корзину</button>
+                        </form>
+                    </div>
+                </td>
+            </tr>
+            </tbody>
+        </table>
     </div>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-            crossorigin="anonymous">
-    </script>
+    <div class="text-center mt-4">
+        <a th:href="@{/product/choose_category}" class="btn btn-success">
+            <i class="fas fa-plus"></i> Создать товар </a>
+        <a th:href="@{/adduser}" class="btn btn-info">
+            <i class="fas fa-plus"></i> Создать пользователя </a>
+    </div>
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous">
+</script>
 </body>
 </html>
