--- a/src/main/resources/templates/show_info.html
+++ b/src/main/resources/templates/show_info.html
@@ -6,44 +6,99 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Show product with options and values</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+          crossorigin="anonymous">
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" th:href="@{/product/list}">Каталог товаров</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">
+                        Меню
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#">Мои заказы</a></li>
+                        <li><a class="dropdown-item" th:href="@{/user_cart}">Моя корзина</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" th:href="@{/logout}">Выйти из аккаунта</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Название товара" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Поиск</button>
+            </form>
+        </div>
+    </div>
+</nav>
 <div class="container">
     <form method="get" th:action="@{product/show}">
         <input type="hidden" name="productId" th:value="${product.id}">
-        <p><b>Категория</b></p>
-        <p th:text="${product.getCategory.getName}"></p>
-        <p><b>Наименование</b></p>
-        <p th:text="${product.getName}"></p>
-        <p><b>Цена</b></p>
-        <p th:text="${product.getPrice}"></p>
-        <p><b>Характеристики</b></p>
-        <div th:each="value : ${values}">
-            <p th:text="${value.getOption()} + ' - ' + ${value.getValue()}"></p>
+        <div class="mb-3">
+            <label class="form-label"><b>Категория</b></label>
+            <p class="form-control-plaintext" th:text="${product.getCategory.getName}"></p>
+        </div>
+        <div class="mb-3">
+            <label class="form-label"><b>Наименование</b></label>
+            <p class="form-control-plaintext" th:text="${product.getName}"></p>
+        </div>
+        <div class="mb-3">
+            <label class="form-label"><b>Цена</b></label>
+            <p class="form-control-plaintext" th:text="${product.getPrice}"></p>
+        </div>
+        <div class="mb-3">
+            <label class="form-label"><b>Характеристики</b></label>
+            <div th:each="value : ${values}">
+                <p class="form-control-plaintext" th:text="${value.getOption()} + ' - ' + ${value.getValue()}"></p>
+            </div>
         </div>
     </form>
 </div>
-
-<div class="feedback">
-    <div class="row"> Ваш отзыв о товаре
+<div class="container feedback">
+    <div class="row">
+        <h3 class="mb-3">Ваш отзыв о товаре</h3>
         <form method="post" th:action="@{/feedback}">
             <input type="hidden" name="productId" th:value="${product.id}">
-            <input type="text" name="textFeedback" placeholder="Ваш отзыв" th:value="${feedback.textFeedback}">
-            <input type="number" name="score" placeholder="Оценка" th:value="${feedback.scoreFeedback}">
-            <input type="submit">
+            <div class="mb-3">
+                <label class="form-label">Ваш отзыв</label>
+                <input type="text" class="form-control" name="textFeedback" th:value="${feedback.textFeedback}"
+                       placeholder="Введите ваш отзыв">
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Оценка</label>
+                <input type="number" class="form-control" name="score" th:value="${feedback.scoreFeedback}"
+                       placeholder="Введите оценку">
+            </div>
+            <input type="submit" class="btn btn-primary">
         </form>
     </div>
 </div>
-
 <div class="all_feedbacks">
     <div class="row">
         <span>Все отзывы о данном товаре:</span>
-            <div th:each="feedback : ${feedbacks}">
-                <br>
-                <span th:text="${feedback.getTextFeedback()}"></span>
-            </div>
+        <div th:each="feedback : ${feedbacks}">
+            <br>
+            <span th:text="${feedback.getTextFeedback()}"></span>
+            <span> - </span>
+            <span th:text="${feedback.getScoreFeedback()}"></span>
+        </div>
     </div>
 </div>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous">
+</script>
 </body>
 </html>
