--- a/src/main/resources/templates/user_form.html
+++ b/src/main/resources/templates/user_form.html
@@ -6,24 +6,77 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>User</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+          crossorigin="anonymous">
 </head>
 <body>
-<h2> Регистрация пользователя</h2>
-<form method="post" th:action="@{/adduser}" th:object="${user}">
-    <hr>
-    <label>Логин пользователя</label>
-    <input type="text" id= "login" th:field="*{login}" class="form-control col-5">
-    <br>
-    <label>Имя пользователя</label>
-    <input type="text" id = "name" th:field="*{name}" class="form-control col-5">
-    <br>
-    <label>Фамилия пользователя</label>
-    <input type="text" id = "surname" th:field="*{surname}" class="form-control col-5">
-    <br>
-    <label>Введите пароль</label>
-    <input type="password" id = "password" th:field="*{password}" class="form-control col-5">
-    <br>
-    <input type="submit" class="btn btn-outline-secondary">
-</form>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" th:href="@{/product/list}">Каталог товаров</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">
+                        Меню
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#">Мои заказы</a></li>
+                        <li><a class="dropdown-item" th:href="@{/user_cart}">Моя корзина</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" th:href="@{/logout}">Выйти из аккаунта</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Название товара" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Поиск</button>
+            </form>
+        </div>
+    </div>
+</nav>
+<div class="container">
+    <h2 class="mt-3"> Регистрация пользователя</h2>
+    <form method="post" th:action="@{/adduser}" th:object="${user}" class="mt-3">
+        <div class="mb-3">
+            <label for="login" class="form-label">Логин пользователя</label>
+            <input type="text" id="login" th:field="*{login}" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label for="name" class="form-label">Имя пользователя</label>
+            <input type="text" id="name" th:field="*{name}" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label for="surname" class="form-label">Фамилия пользователя</label>
+            <input type="text" id="surname" th:field="*{surname}" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label for="password" class="form-label">Введите пароль</label>
+            <input type="password" id="password" th:field="*{password}" class="form-control">
+        </div>
+        <button type="submit" class="btn btn-outline-secondary">Зарегистрироваться</button>
+    </form>
+</div>
+<!-- Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+        integrity="sha384-4U6KKiREzmJZU8cb+UcQyF/cTUpzMAxJcg7aLH9X54egnVq3lMY12cgrVJ1n+wuU"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.min.js"
+        integrity="sha384-0z6xNra27g0XMjXGrH0Ivpzn2QWPw7V+hN0iIyAdV+xBxM1t8"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous">
+</script>
 </body>
 </html>
