--- a/src/main/resources/templates/user_orders.html
+++ b/src/main/resources/templates/user_orders.html
@@ -6,12 +6,78 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+          crossorigin="anonymous">
+    <title>Заказы</title>
 </head>
 <body>
-<!--<div class="orders">-->
-<!--    <div th:each="order : ${}"-->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" th:href="@{/product/list}">Каталог товаров</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">
+                        Меню
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" th:href="@{/user_orders}">Мои заказы</a></li>
+                        <li><a class="dropdown-item" th:href="@{/user_cart}">Моя корзина</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" th:href="@{/logout}">Выйти из аккаунта</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Название товара" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Поиск</button>
+            </form>
+        </div>
+    </div>
+</nav>
+
+<div class="container">
+    <form method="post" th:action="@{/make_order}">
+        <div class="orders">
+            <div class="form-group">
+                <label for="deliveryAddress">Адрес доставки:</label>
+                <input type="text" name="deliveryAddress" th:value="${deliveryAddress}" class="form-control" id="deliveryAddress" placeholder="Впишите адрес доставки">
+            </div>
+            <h3>Ваши заказы</h3>
+            <div class="show_orders">
+                <span th:each="cartItem : ${cartItems}">
+                    <span th:text="${cartItem.getProduct().getName()}"></span>
+                </span>
+            </div>
+        </div>
+       <button type="submit">Подтвердить заказ</button>
+    </form>
+</div>
+
+<!--<div class="change_status">-->
+<!--    <div class="row">-->
+<!--        <form th:action="@{/change_status}" method="post">-->
+<!--            <input type="hidden" name="orderId" th:value="${order.id}">-->
+<!--            <div th:each="status : ${order.getOrder_status()}">-->
+<!--                <input th:text="status.name">-->
+<!--            </div>-->
+<!--            <button type="submit">Изменить статус заказа</button>-->
+<!--        </form>-->
+<!--    </div>-->
 <!--</div>-->
 
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous">
+</script>
 </body>
 </html>
