--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -26,9 +26,9 @@
                         Меню
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" th:href="@{/user_profile}">Мой профиль</a></li>
-                        <li><a class="dropdown-item" th:href="@{/user_orders}">Мои заказы</a></li>
-                        <li><a class="dropdown-item" th:href="@{/user_cart}">Моя корзина</a></li>
+                        <li><a class="dropdown-item" th:href="@{/profile}">Мой профиль</a></li>
+                        <li><a class="dropdown-item" th:href="@{/order}">Мои заказы</a></li>
+                        <li><a class="dropdown-item" th:href="@{/cart}">Моя корзина</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
