--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -14,47 +14,50 @@
 <header th:replace="navbar"></header>
 <h2>Корзина:</h2>
 <div class="container">
-    <div class="d-flex flex-row mb-3">
-        <div class="row">
-            <div class="col">
-                <div th:each="cartItem : ${cartItems}">
-                    <div class="d-flex justify-content-between align-items-center">
-                        <span th:text="${cartItem.getProduct().name}"></span>
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th>Название товара</th>
+            <th>Количество</th>
+            <th>Цена за единицу товара</th>
+            <th>Действия</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="cartItem : ${cartItems}">
+            <td th:text="${cartItem.getProduct().name}"></td>
+            <td th:text="${cartItem.getQuantity()}"></td>
+            <td th:text="${cartItem.getProduct().price}"></td>
+            <td>
+                <form th:action="@{/increase}" th:method="get">
+                    <div class="d-flex align-items-center">
                         <form th:action="@{/increase}" th:method="get">
-                            <div class="d-flex align-items-center">
-                                <button type="submit" class="btn btn-outline-primary btn-sm mx-1">+</button>
-                                <span th:text="${cartItem.getQuantity()}"></span>
-                                <input type="hidden" name="cartItemId" th:value="${cartItem.getId()}">
-                            </div>
+                            <button type="submit" class="btn btn-outline-primary btn-sm mx-1">+</button>
+                            <input type="hidden" name="cartItemId" th:value="${cartItem.getId()}">
                         </form>
                         <form th:action="@{/decrease}" th:method="get">
-                            <div class="d-flex align-items-center">
-                                <button type="submit" class="btn btn-outline-primary btn-sm mx-1">-</button>
-                                <input type="hidden" name="cartItemId" th:value="${cartItem.getId()}">
-                            </div>
+                            <button type="submit" class="btn btn-outline-primary btn-sm mx-1">-</button>
+                            <input type="hidden" name="cartItemId" th:value="${cartItem.getId()}">
                         </form>
                         <form th:action="@{/removeItem}" th:method="get">
-                            <div class="d-flex align-items-center">
-                                <button type="submit" class="btn btn-danger btn-sm mx-1">Удалить из корзины</button>
-                                <input type="hidden" name="cartItemId" th:value="${cartItem.getId()}">
-                            </div>
+                            <button type="submit" class="btn btn-danger btn-sm mx-1">Удалить из корзины</button>
+                            <input type="hidden" name="cartItemId" th:value="${cartItem.getId()}">
                         </form>
                     </div>
-                </div>
-                <div class="removeAllItems">
-                    <div class="removeAllItemsButton">
-                        <form th:action="@{/removeAllItems}" th:method="get">
-                        <button type="submit" class="btn btn-danger btn-sm mx-1">Удалить все товары</button>
-                        </form>
-                    </div>
-                </div>
-                <div class="products_price">
-                    Сумма товаров в корзине
-                    <p th:text="${price}"></p>
-                </div>
-            </div>
-        </div>
-    </div>
+                </form>
+            </td>
+        </tr>
+        </tbody>
+        <tfoot>
+        <tr>
+            <td colspan="3" class="text-right"><strong>Итого:</strong></td>
+            <td th:text="${totalPrice}"></td>
+                <form th:action="@{/removeAllItems}" th:method="get">
+                    <button type="submit" class="btn btn-danger btn-sm mx-1">Удалить все товары</button>
+                </form>
+        </tr>
+        </tfoot>
+    </table>
 </div>
 <div class="container">
     <div class="d-flex flex-row mb-3">
@@ -64,6 +67,16 @@
                     <button type="submit" class="btn btn-secondary">Назад</button>
                 </form>
             </div>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="d-flex flex-row mb-4">
+        <div class="col-md-7">
+            <form th:action="@{/make_order}" method="post">
+                <input type="text" name="address" th:value="${address}">
+                <button type="submit" class="btn btn-success">Оформить заказ</button>
+            </form>
         </div>
     </div>
 </div>
