--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -50,11 +50,12 @@
         </tbody>
         <tfoot>
         <tr>
-            <td colspan="3" class="text-right"><strong>Итого:</strong></td>
+            <td colspan="1" class="text-right"><strong>Итого:</strong></td>
+            <td th:text="${totalAmount}"></td>
             <td th:text="${totalPrice}"></td>
-                <form th:action="@{/removeAllItems}" th:method="get">
-                    <button type="submit" class="btn btn-danger btn-sm mx-1">Удалить все товары</button>
-                </form>
+            <td><form th:action="@{/removeAllItems}" th:method="get">
+                <button type="submit" class="btn btn-danger btn-sm mx-1">Удалить все товары</button>
+            </form></td>
         </tr>
         </tfoot>
     </table>
@@ -74,7 +75,7 @@
     <div class="d-flex flex-row mb-4">
         <div class="col-md-7">
             <form th:action="@{/make_order}" method="post">
-                <input type="text" name="address" th:value="${address}">
+                <input type="text" name="address" th:value="${address}" placeholder="Адрес доставки">
                 <button type="submit" class="btn btn-success">Оформить заказ</button>
             </form>
         </div>
