--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -25,10 +25,12 @@
                        data-bs-toggle="dropdown" aria-expanded="false">
                         Меню
                     </a>
+<!--                    <a class="user_feedbacks" th:href = "@{/}">Отзывы пользователей</a>-->
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" th:href="@{/profile}">Мой профиль</a></li>
                         <li><a class="dropdown-item" th:href="@{/order}">Мои заказы</a></li>
                         <li><a class="dropdown-item" th:href="@{/cart}">Моя корзина</a></li>
+                        <li th:if="${#authorization.expr('hasRole(''admin'')')}"><a class="dropdown-item" th:href="@{/admin/feedbacks}">Все отзывы</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
