--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -25,35 +25,18 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="order : ${orders}">
+        <tr th:each="order : ${ordersByUser}">
             <td>
                 <span th:each="orderProduct : ${order.getOrderProducts()}"
-                      th:text="${orderProduct.getProduct().getName()}"></span>
+                      th:text="${orderProduct.getProduct().getName()}">
+                </span>
             </td>
             <td th:text="${order.getOrder_status().getStatus()}"></td>
             <td th:text="${order.getDeliveryAddress()}"></td>
             <td th:text="${order.getOrderTime()}"></td>
-            <td th:if="${#authorization.expr('hasRole(''admin'')')}"> <form th:action="@{/change_status}" method="get">
-                <div class="dropdown">
-                    <input type="hidden" name="orderId" th:value="${order.getId()}">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdown1" role="button"
-                       data-bs-toggle="dropdown" aria-expanded="false"> Изменить статус заказа </a>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <button type="submit" class="dropdown-item" name="orderStatus"
-                                th:each="status : ${statuses}"
-                                th:text="${status.getStatus()}"
-                                th:value="${status.name()}"
-                                ></button>
-                    </div>
-                </div>
-            </form>
-            </td>
         </tr>
         </tbody>
     </table>
 </div>
 </body>
 </html>
-<!--<td><button th:each="status : ${orderStatus}"></button>-->
-<!--    <a th:href="@{/change_status(orderId=${order.id})}" class="btn btn-sm btn-primary">Изменить статус заказа</a></td>-->
-<!--    th:if="${#authorization.expr('hasRole(''admin'')')}"-->
