--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -30,10 +30,10 @@
                         <li><a class="dropdown-item" th:href="@{/profile}">Мой профиль</a></li>
                         <li><a class="dropdown-item" th:href="@{/order}">Мои заказы</a></li>
                         <li><a class="dropdown-item" th:href="@{/cart}">Моя корзина</a></li>
-                        <li th:if="${#authorization.expr('hasRole(''admin'')')}"><a class="dropdown-item" th:href="@{/admin/feedbacks}">Все отзывы</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
+                        <li th:if="${#authorization.expr('hasRole(''admin'')')}">
+                            <a class="dropdown-item" th:href="@{/show_admin_orders}">Заказы пользователей</a></li>
+                        <li th:if="${#authorization.expr('hasRole(''admin'')')}"><a class="dropdown-item" th:href="@{/admin/feedbacks}">Отзывы пользователей</a></li>
+                        <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" th:href="@{/logout}">Выйти из аккаунта</a></li>
                     </ul>
                 </li>
