--- a/src/main/resources/templates/show_info.html
+++ b/src/main/resources/templates/show_info.html
@@ -30,6 +30,7 @@
                 </div>
                 <div class="mb-3">
                     <span class="form-label">Средняя оценка</span>
+                    <span th:text="${@feedbackService.getAverageFeedbackScore(product.getId())}"></span>
                 </div>
             </form>
             <div class="all_feedbacks">
@@ -39,6 +40,7 @@
                         <div th:each="feedback : ${feedbacks}" th:if="${feedback.isPublished()}">
                             <input type="hidden" name="feedbackId" th:value="${feedback.id}">
                             <input type="hidden" name="productId" th:value="${product.id}">
+                            <em><label th:text="${feedback.getUser().getLogin() + ':'}"></label></em>
                             <span th:text="${feedback.getTextFeedback() + ' - ' + feedback.getScoreFeedback()}"></span>
                             <button th:if="${#authorization.expr('hasRole(''admin'')')}" type="submit">Удалить отзыв
                             </button>
@@ -47,7 +49,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6" th:if="${!@feedbackService.isFeedbackExist(product.getId())}">
             <h3>Отзыв</h3>
             <form method="post" th:action="@{/leave_feedback}">
                 <input type="hidden" name="productId" th:value="${product.id}">
@@ -67,18 +69,6 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Отправить отзыв</button>
             </form>
-            <div class="mb-3">
-                <br>
-                <p>Отзыв на проверке у администратора:</p>
-                <form th:action="@{/delete_feedback}">
-                    <div th:each="feedback : ${feedbacks}" th:if="${!feedback.isPublished()}">
-                        <input type="hidden" name="feedbackId" th:value="${feedback.id}">
-                        <input type="hidden" name="productId" th:value="${product.id}">
-                        <span th:text="${feedback.getTextFeedback() + ' - ' + feedback.getScoreFeedback()}"></span>
-                        <button type="submit">Удалить</button>
-                    </div>
-                </form>
-            </div>
         </div>
     </div>
 </div>
