--- a/src/main/resources/templates/admin_orders.html
+++ b/src/main/resources/templates/admin_orders.html
@@ -23,7 +23,7 @@
             <th>Пользователь</th>
             <td>Адрес доставки</td>
             <th>Дата оформления</th>
-            <td th:if="${#authorization.expr('hasRole(''admin'')')}">Изменить</td>
+            <td>Изменить</td>
         </tr>
         </thead>
         <tbody>
